[package]
name = "ipmes-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
petgraph = "0.6.4"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
thiserror = "1.0.48"
